base/nodejs-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-nodejs-backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-nodejs-backend
  template:
    metadata:
      labels:
        app: demo-nodejs-backend
    spec:
      containers:
        - name: demo-nodejs-backend
          image: 342181461775.dkr.ecr.ap-northeast-2.amazonaws.com/demo-nodejs-backend
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
